# bank_project

./: .flake8  .gitignore  README.md  external_api.py  main.py  pyproject.toml  transactions_filtered.json
htmlcov/: class_index.html  function_index.html  index.html  main_py.html  status.json  z_145eef247bfb46b6___init___py.html  z_145eef247bfb46b6_masks_py.html  z_145eef247bfb46b6_processing_py.html  z_145eef247bfb46b6_widget_py.html  z_36f028580bb02cc8___init___py.html  z_36f028580bb02cc8_conftest_py.html  z_36f028580bb02cc8_test_masks_py.html  z_36f028580bb02cc8_test_processing_py.html  z_36f028580bb02cc8_test_widget_py.html
src/: decorators.py  generators.py  masks.py  processing.py  tasks.txt  utils.py  variables.py  widget.py
test/: conftest.py  test_decorators.py  test_external_api.py  test_generators.py  test_masks.py  test_processing.py  test_utils.py  test_widget.py
